add appliciantTypes and changes in other classes